1.3.12
	+ Add EBox::Ldap::lastModificationTime to know when the master LDAP
 	  database was modified for the last time
	+ Index uid and memberUid to avoid some warnings and improve performance,
	  plus remove some old code and fix some broken one in that part of the code
	+ Bugfix: disable edition of users and groups in ad-slave mode
	+ Don't allow modification of ldap password in Mode model if
	  it has been autogenerated by the eBox installer
	+ Add page title
	+ Separate the Windows AD options in a different model
	+ Fixed the warning of "Edit User" when there are no users in a slave
	+ Synchronize all the users from the AD and not only from CN=Users
	+ Remove 'optional' from remote in Mode and also useless validateRow
1.3.10
	+ Use disableApparmorProfile from EBox::Module::Service twice.
	  First in enableActions. And also in setConf to avoid issues
	  if apparmor is installed after users is enabled.
1.3.9
	+ Bugfix: return empty array in usedFiles if it's not master mode
1.3.8
	+ Bugfix: fixed wrong disable of fields in selecting ad-slave in Mode model
1.3.7
	+ Synchronization with Windows Active Directory (#1443)
1.3.6
	+ Use anonymous bind to fetch dn
1.3.5
	+ Disable slapd apparmor profile in enableActions
	+ Reload nscd when adding users and groups
	+ Bugfix: backup bug report now works again
	+ Bugfix: slave-sync does not try to real journal dir when not
	configured or in slave mode. Journal dir created on
	master's setup.
1.3.0
	+ eBox LDAP architecture now supports a master-slave configuration
	+ bugfix: Update usercorner service when there is a change on the port number
1.1.30
	+ Added widget to manage group belonging from Edit User page
	+ Fixed backup/restore problem with paswords and given/last names
	+ Changed the way users are stored in LDAP, added givenName in addition
	to sn, now cn=givenName+sn instead of cn=uid, this fixes a
	incompatibility bug with eGroupware
	+ In the Edit User interface now Name and Last name are separate
	fields